src/test/compile-fail/return-unit-from-diverging.rs
// Copyright 2014 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// Test that we get the usual error that we'd get for any other return type and not something about
// diverging functions not being able to return.

fn fail() -> ! {
    return; //~ ERROR in a function whose return type is not
}

fn main() {
}

